lib/flux/apps/home/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/instance: esphome
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
